fixed contact link; fixed kenburns covering down arrow

--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,7 @@ body {
 #down-arrow-link {
   transform: translateY(40vh);
   display: block;
+  z-index: 10;
   width: 50px;
   margin-left: auto;
   margin-right: auto;
@@ -201,7 +202,7 @@ body {
   opacity: 0.1;
   height: 100vmin;
   margin: 0;
-  top: 100vh;
+  top: 105vh;
   left: -8vw;
   animation: kenburns-left 20s linear infinite both;
 }
